Fix dark mode colors

--- a/src/components/app.styl
+++ b/src/components/app.styl
@@ -140,7 +140,8 @@ i
         background-color #373838
 
     h1
-        color #ffffff
+    h2
+        color #c8ccce
 
     a
         &:hover
@@ -148,4 +149,4 @@ i
 
     .loader
         border-color #697278
-        border-top-color #1f2529
+        border-top-color #ffffff
