--- a/src/components/auth/auth.styl
+++ b/src/components/auth/auth.styl
@@ -109,7 +109,7 @@
 @media (prefers-color-scheme: dark)
     .content
         .borderbox
-            border-color #697278
+            border-color #373838
             background-color #373838
 
             li
@@ -117,5 +117,11 @@
 
             a
                 &:hover
+                    .icon-database
+                    .icon-google
+                    .icon-facebook
+                    .icon-microsoft
+                    .icon-mobile-id
+                    .icon-id-card
                     .icon-database
                         color #ffffff
